# Context-Aware-Cnn

./: Dockerfile  Makefile  README.md  backfill_checkpoints_to_mlflow.py  coverage.xml  mlflow.db  pyproject.toml  requirements.lock.txt  requirements.txt
configs/: config.yaml
data/large_images/gt/: 1003.tif  1006.tif  1008.tif  1009.tif  1010.tif  1012.tif  1013.tif  1014.tif
data/large_images/noisy/: 1000.tif  1001.tif  1002.tif  1006.tif  1007.tif  1008.tif  1010.tif  1011.tif  1012.tif  1015.tif
data/small_images/gt/: 1000.tif  1001.tif  1003.tif  1004.tif  1011.tif  1014.tif  1015.tif  1016.tif  1019.tif  1020.tif  1021.tif  1022.tif  1023.tif  1024.tif  1028.tif  1032.tif  1036.tif  1037.tif  1039.tif  1041.tif  1043.tif  1047.tif  1048.tif  1049.tif  1051.tif  1052.tif  1053.tif  1056.tif  1057.tif  1058.tif  1061.tif  1062.tif  1065.tif  1066.tif  1068.tif  1069.tif  1070.tif  1072.tif  1074.tif  1075.tif  (+1205 more)
data/small_images/noisy/: 1002.tif  1006.tif  1011.tif  1012.tif  1014.tif  1015.tif  1017.tif  1018.tif  1019.tif  1020.tif  (+1227 more)
scripts/: download.py  infer.py  s3_pull.py  s3_push.py  train.py
src/unet_denoising/: __init__.py  cli.py  config.py  exceptions.py  logging_utils.py  metrics.py
src/unet_denoising_prod.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_config.py  test_data_modules.py  test_download_module.py  test_engine_and_halo.py  test_model_metrics_logging.py  test_optuna_pipeline.py  test_pipelines_core.py  test_s3_pipeline.py  test_storage.py  test_validation.py
(+2534 files in other folders)
