[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unet-denoising-prod"
version = "0.1.0"
description = "Production-ready UNet denoising refactor from notebook"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "torch",
  "tifffile",
  "tqdm",
  "matplotlib",
  "scikit-image",
  "pyyaml",
  "boto3",
  "mlflow",
  "optuna",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "build>=1.2.0",
]

[project.scripts]
unet-denoise = "unet_denoising.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
